# Zircolite-Rules-v2

./: .gitignore  .gitmodules  README.md  gen_ruleset.py  pyproject.toml  rules_linux.json  rules_linux_high.json  rules_linux_medium.json  rules_windows_generic_high.json  rules_windows_generic_medium.json  rules_windows_sysmon_high.json  rules_windows_sysmon_medium.json
.github/workflows/: Update.yml
